# controller

./: CMakeLists.txt  commands.txt
src/: commands.hpp  main.cpp
src/arduino_connector/: arduino_connector.cpp  arduino_connector.hpp  sound_player.hpp
src/logger/: logger.cpp  logger.hpp
src/server/: resolvers.hpp  server.cpp  server.hpp
src/soundpad/: sound_player.cpp  sound_player.hpp  soundpad.hpp
